# shape

./: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  package.json  vitest.config.mjs
desktop/: .gitignore  Gemfile  README.md  package.json
desktop/fastlane/: Appfile  Matchfile  app_store_connect_api_key.json
desktop/scripts/: ios-dev-local.sh
desktop/src/: index.html
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.ios.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: keychain.rs  lib.rs  main.rs
emails/: package.json  tsconfig.json
emails/src/: build.ts  logo.ts
engine/: package.json  tsconfig.json
engine/constants/: brand.ts
engine/crypto/: constants.ts  crypto.ts  types.ts  utils.ts
engine/global/: global-client.ts  global-container.ts  global-di.ts
engine/initializers/: README.md  hydrate-search-index.ts  initialize-workspace.ts  run-once-initializer.ts
engine/models/: acl-entry.ts  auth-types.ts  client_user.test.ts  client_user.ts  entity-link.ts  entity.ts  invite-status.ts  invite-types.ts  notification.ts  server-date.ts  server-user.ts  team.ts  user-invite.ts  user_settings.ts  workspace-account-requests.ts  workspace-email-invite.ts  workspace-invite.ts  workspace-key.ts  workspace-member.ts  workspace-subscription.test.ts  workspace-subscription.ts  workspace.ts
engine/processes/: README.md  draft-sync-scheduler.ts  event-bus.ts  handle-sse-events.ts  (+4 more)
plugins/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
protobufs/: entityblock.proto
server/: .air.toml  .env.sample  go.mod  go.sum  main.go  shape.db-shm
web/: .env.desktop  .env.mobile  .env.sample  .env.stripe  .yarnrc.yml  index.html  main.tsx  package.json  playwright.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
(+711 files in other folders)
