[package]
name = "shape-desktop"
version = "0.1.6"
description = "Shape desktop and mobile application"
authors = ["Shape Labs"]
license = "Custom"
repository = "https://github.com/shapelabs/shape"
edition = "2021"
rust-version = "1.77"

[lib]
# Required for mobile targets (iOS/Android) that need a shared library.
crate-type = ["staticlib", "cdylib", "rlib"]
name = "shape_desktop_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Devtools feature is required to open the inspector in release builds (opt-in via env var).
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-notifications = { version = "0.4.0", features = ["push-notifications"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Desktop (macOS, Windows, Linux): Use keyring crate for native credential storage.
# - macOS: Keychain
# - Windows: Credential Manager
# - Linux: Secret Service (GNOME Keyring)
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android: Use tauri-plugin-keystore for Android Keystore integration.
tauri-plugin-keystore = "2.1.0-alpha.1"

[target.'cfg(target_os = "ios")'.dependencies]
# iOS: Use keyring crate with apple-native feature for Keychain access.
keyring = { version = "3", features = ["apple-native"] }
# iOS: objc2 crates for configuring the webview for edge-to-edge display.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSObject", "NSGeometry"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
